--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,5 +8,13 @@ ja:
         first_name: 名前
         last_name_reading: 苗字(カナ)
         first_name_reading: 名前(カナ)
-      tweet:
+      item:
         image: 画像
+        title: 商品名
+        content: 商品の説明
+        genre_id: カテゴリー
+        condition_id: 商品の状態
+        cost_id: 配送料の負担
+        prefecture_id: 発送元の地域
+        shipping_date_id: 発送までの日数
+        price: 販売価格
